# basics

./: CMakeLists.txt  emacs.mine  setup.sh
include/: PKDate.hpp
include/base/: Functor.hpp  Matrix.hpp  PKDate.hpp
include/ml/: ActivationFunc.hpp  NNetFeedForward.hpp
src/: CMakeLists.txt  PKDate.cpp  PKDate.test.cpp
src/base/: CMakeLists.txt  PKDate.cpp
src/base/test/: Matrix.test.cpp  PKDate.test.cpp
src/ml/: ActivationFunc.cpp  CMakeLists.txt  NNetFeedForward.cpp
src/ml/test/: NNetFeedForward.test.cpp
